@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 1765 RMD160 8c168ba0b18eb3cf479911c33f138bccb341f0a2 SHA1 c605e182a7cdb99e6457f93c1cf1e9445a05f511 SHA256 9e5c2de91b9ed002df02c86f576f6c358a0b0ac392d35315de12d4afa13bed84
-EBUILD midori-9999.ebuild 1749 RMD160 ef42b199b4364de03f7f32d0660b26777811fd5f SHA1 b7deb7a4afa778d01fa534bbb6da088d207b5c0d SHA256 0a98a338b4a2c5211c7b052afdcc2123e0a81334e86793da227b62d3f574231e
-MISC ChangeLog 1334 RMD160 4447cca3a125a7a5894946717f840beaac63684e SHA1 75bfa7a98abeff64bb68781639c76f8bb6f25167 SHA256 dfae5f5b3b995069f9b72e41e98bfc2e6f5c8408ef4e70a13a41ae59befee5d4
+EBUILD midori-0.1.1.ebuild 2096 RMD160 a60b4d1a7540b3b01127d41611f9524c0d751bef SHA1 e62421f43fd64828bbbed913f120d5ffff106093 SHA256 0e38ea68dfa6b307da4d4218163cf30d54fa888a52bb1353e8a8cff1805f49b8
+EBUILD midori-9999.ebuild 2014 RMD160 92aea3eb6dd6a1262d6115a664f2b1e36270135e SHA1 be91917ebbb6cf0cdaab1e90983345ad7e2a6fe2 SHA256 59ad6cf39373905c462f2111def3bb422a18ed1930208f7e2123b01a5a884c90
+MISC ChangeLog 1491 RMD160 5aa780168c1324da880321f8cb0f62f738a56432 SHA1 1a7ceaad83255c40d0f05809911d0443e83323f5 SHA256 616b47d9a9c29e1181a097062e59720319d670396f25103f1b591362c1cde62f
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk9GOUACgkQKhnDs22gwa8ZlQCfZN9/ZMFCXk4hU8qE/80sUvIh
-Yf0AoMsPN3TqkFZJWErfa9B0DKzg5cci
-=tz8v
+iEYEARECAAYFAkk9H9MACgkQKhnDs22gwa/hcgCaA52/oJSqQZlj/3TvJKxZbcsT
+VygAnRpdG92BSILDgPEEmySUDpOzT25e
+=VK98
 -----END PGP SIGNATURE-----
